--- a/frontend/rendy/style.css
+++ b/frontend/rendy/style.css
@@ -10,14 +10,14 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: rgb(98, 0, 255);
+    background-color: rgb(8, 18, 30);
 }
 
 .wrapper {
-    background: #fff;
+    background: rgba(172, 23, 27);
     padding: 25px;
     border-radius: 10px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 15px rgba(172, 23, 27);
     max-width: 400px;
     width: 100%;
 }
@@ -25,7 +25,7 @@ body {
 form h1 {
     margin-bottom: 20px;
     font-size: 24px;
-    color: #333;
+    color: #ffffff;
     text-align: center;
 }
 
@@ -82,7 +82,7 @@ form h1 {
 .btn {
     width: 100%;
     padding: 10px 0;
-    background-color: rgb(98, 0, 255);
+    background-color: rgb(8, 18, 30);
     border: none;
     border-radius: 5px;
     color: #fff;
