--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -1,21 +1,25 @@
 
  <!DOCTYPE html>
-<html lang="ru">
+<html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home-page</title>
+    <link rel="stylesheet" href="/../static/css/style.css">
 </head>
+
 <body>
-    <header>
+    <header class="top-header">
         <div class="logo">
            <img src="логотип.png" alt="Логотип">
         </div>
-        <nav>
+        <nav class="login-top-header">
            <ul>
-              <p><a href="RegistrationWindow.html">Войти</a></p>
+              <p><a href="login-window.html">Войти</a></p>
            </ul>
         </nav>
      </header>
+     <h1>Welcome, {{ username }}!</h1>
 </body>
 </html>
