--- a/templates/authorization.html
+++ b/templates/authorization.html
@@ -11,12 +11,12 @@
 
 <body>
     <div class="wrapper">
-        <form method="POST" action="/register">
+        <form method="POST" action="/authorization">
             <h1>
                 Авторизация
             </h1>
             <div class="input-box">
-                <input type="text" placeholder="Логин" required>
+                <input type="text" name = "loginLabel" placeholder="Логин" required>
                 <i class='bx bxs-user'></i>
             </div>
             <div class="input-box">
