--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -12,7 +12,7 @@
 <body>
     <header class="top-header">
         <div class="logo">
-           <img src="логотип.png" alt="Логотип">
+           <img src="..\static\image\logo.jpg" class="resized-image">
         </div>
         <nav class="login-top-header">
            <ul>
@@ -20,6 +20,6 @@
            </ul>
         </nav>
      </header>
-     <h1>Welcome, {{ username }}!</h1>
+     <h1>{{ username }}</h1>
 </body>
 </html>
