--- a/templates/header.html
+++ b/templates/header.html
@@ -4,78 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Навбар</title>
-    <style>
-         body {
-            margin: 0;
-            font-family: "San Francisco", sans-serif;
-            background-color: rgb(16, 23, 33);
-            src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
-        }
-        .marquee {
-            background-color: rgb(16, 23, 33);
-            color: white;
-            padding: 5px 0;
-            overflow: hidden;
-            white-space: nowrap;
-        }
-        .marquee span {
-            display: inline-block;
-            animation: marquee 60s linear infinite;
-            word-spacing: 10%; /* Адаптивные отступы между предложениями */
-        }
-        @keyframes marquee {
-            0% {
-                transform: translateX(100%);
-            }
-            100% {
-                transform: translateX(-100%);
-            }
-        }
-        body {
-            margin: 0;
-            font-family: "San Francisco", sans-serif;
-            background-color: rgb(16, 23, 33);
-            src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
-        }
-        .navbar {
-            background-color: rgb(24, 40, 53);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            height: 70px;
-            padding: 0 ;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-        }
-        .navbar .logo {
-            color: white;
-            font-size: 24px;
-            font-weight: bold;
-            padding: 0 70px;
-        }
-        .navbar .logo img {
-            height: 110px; /* Высота логотипа */
-        }
-        .navbar .buttons {
-            display: flex;
-            gap: 0px;
-        }
-        .navbar button {
-            background-color: rgb(116, 26, 26);
-            border: none;
-            color: white;
-            padding: 0 30px;
-            height: 70px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            font-size: 16px;
-        }
-        .navbar button:hover {
-            background-color: rgb(172,23,27);
-        }
-        .marquee .sentence {
-            margin-right: 200px; /* Адаптивные отступы между предложениями */
-        }
-    </style>
+    <link rel="stylesheet" href="/../static/css/style.css">
 </head>
 <body>
 <div class="marquee">
@@ -84,6 +13,7 @@
         <span  class="sentence">Количество найденных тиммейтов сегодня: 1223.</span>
         <span  class="sentence">Пользователей зарегистрированно: 120000.</span>
         <span  class="sentence">Количество активных заявок: 663</span>
+
         </span>
 </div>
     <div class="navbar">
@@ -91,24 +21,12 @@
             <img src="https://media.discordapp.net/attachments/1270117157988204646/1273156525548109824/Remove-bg.ai_1723614523985.png?ex=66bd96e9&is=66bc4569&hm=f683d6cfb605a15e0665a30678fa0a1dc0d2bd9b4c3b9342db07b50c6626b273&=&format=webp&quality=lossless&width=563&height=563" alt="Логотип">
         </div>
         <div class="buttons">
-            <button>Главная</button>
+            <form action="https://google.com"><button type="submit">Главная</button></form>
             <button>Поиск игроков</button>
-            <button>Войти</button>
+            <form action="/authorization"><button type="submit">Войти</button></form>
             <button>Зарегистрироваться</button>
         </div>
     </div>
- <script>
-        function startMarquee() {
-            const marquee = document.querySelector('.marquee');
-            const text = document.getElementById('marquee-text');
-            const marqueeWidth = marquee.offsetWidth;
-            const textWidth = text.offsetWidth;
-            const duration = (textWidth + marqueeWidth) / 50; // Скорость в пикселях в секунду
-
-            text.style.animation = `marquee ${duration}s linear infinite`;
-        }
-
-        window.onload = startMarquee;
-    </script>
+<script src="marquee.js"></script>
 </body>
 </html>
