--- a/templates/authorization.html
+++ b/templates/authorization.html
@@ -29,7 +29,7 @@
             <br>
             <p>У вас нет учетной записи?<a href="#">Регистрация</a></p>
         </form>
-
+    </div>
 </body>
 
 </html>
